--- a/accounting-reporting/reports/CompanyHeader.jrxml
+++ b/accounting-reporting/reports/CompanyHeader.jrxml
@@ -11,7 +11,7 @@
 			<frame>
 				<reportElement x="280" y="0" width="175" height="245" isPrintWhenDetailOverflows="true" uuid="b6f48930-b6c8-413e-bf07-9ba4e5630e9e"/>
 				<textField>
-					<reportElement style="INVOICE_TX_12" isPrintRepeatedValues="false" x="0" y="0" width="175" height="16" isPrintWhenDetailOverflows="true" uuid="30b80a56-e3bc-44e6-9b7f-85178318ab48"/>
+					<reportElement style="STD_12" isPrintRepeatedValues="false" x="0" y="0" width="175" height="16" isPrintWhenDetailOverflows="true" uuid="30b80a56-e3bc-44e6-9b7f-85178318ab48"/>
 					<textElement textAlignment="Right"/>
 					<textFieldExpression><![CDATA[$P{company}.get("name")]]></textFieldExpression>
 				</textField>
@@ -26,19 +26,19 @@
 					<printWhenExpression><![CDATA[$P{client} != null]]></printWhenExpression>
 				</reportElement>
 				<textField>
-					<reportElement style="INVOICE_TX_08" x="0" y="0" width="245" height="11" isPrintWhenDetailOverflows="true" uuid="384ea088-5dfb-4017-a9a1-ec6da073c89c"/>
+					<reportElement style="STD_08" x="0" y="0" width="245" height="11" isPrintWhenDetailOverflows="true" uuid="384ea088-5dfb-4017-a9a1-ec6da073c89c"/>
 					<textFieldExpression><![CDATA[$P{company}.get("name") + " | " + $P{company}.get("address.street") + " | " + $P{company}.get("address.postalCode") +" " + $P{company}.get("address.city")]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement style="INVOICE_TX_12" x="0" y="17" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="6fb95b3b-b019-4171-9b92-5901345f5fde"/>
+					<reportElement style="STD_12" x="0" y="17" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="6fb95b3b-b019-4171-9b92-5901345f5fde"/>
 					<textFieldExpression><![CDATA[$P{client}.get("name")]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement style="INVOICE_TX_12" x="0" y="35" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="13b463bf-be3c-40d2-9813-112c21e2327a"/>
+					<reportElement style="STD_12" x="0" y="35" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="13b463bf-be3c-40d2-9813-112c21e2327a"/>
 					<textFieldExpression><![CDATA[$P{client}.get("address.street")]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement style="INVOICE_TX_12" x="0" y="54" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="df961f60-6acb-429d-9a3b-24318af72196"/>
+					<reportElement style="STD_12" x="0" y="54" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="df961f60-6acb-429d-9a3b-24318af72196"/>
 					<textFieldExpression><![CDATA[$P{client}.get("address.postalCode") + " " + $P{client}.get("address.city")]]></textFieldExpression>
 				</textField>
 			</frame>
